--- a/landingUnofficial.html
+++ b/landingUnofficial.html
@@ -21,6 +21,9 @@
         }
         img {
             width: 200px;
+            background-color: white;
+            padding: 10px;
+            border-radius: 10px;
         }
         .welcome-text {
             font-size: 2rem;
