--- a/webapp/landingUnofficial.html
+++ b/webapp/landingUnofficial.html
@@ -38,10 +38,12 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/State_Farm_logo.svg/512px-State_Farm_logo.svg.png" alt="State Farm Logo">
         <div class="welcome-text" id="welcomeText">Like a Good Neighbor, State Farm is There.</div>
     </div>
-
-    <script>
+     <script>
         window.onload = function() {
             document.getElementById("welcomeText").style.opacity = 1;
+            setTimeout(function() {
+                window.location.href = 'login.html';
+            }, 3000); // Redirect after 3 seconds
         };
     </script>
 </body>
