--- a/webapp/login.html
+++ b/webapp/login.html
@@ -25,6 +25,11 @@
         }
         img {
             width: 150px;
+            margin-bottom: 10px;
+        }
+        .subtitle {
+            font-size: 1.2rem;
+            font-weight: bold;
             margin-bottom: 20px;
         }
         input {
@@ -52,6 +57,7 @@
 <body>
     <div class="container">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/State_Farm_logo.svg/512px-State_Farm_logo.svg.png" alt="State Farm Logo">
+        <div class="subtitle">ForecastTX</div>
         <h2>Login</h2>
         <form>
             <input type="text" placeholder="Username" required>
@@ -61,4 +67,3 @@
     </div>
 </body>
 </html>
-
