--- a/webapp/login.html
+++ b/webapp/login.html
@@ -31,6 +31,8 @@
             font-size: 1.2rem;
             font-weight: bold;
             margin-bottom: 20px;
+            color: #e2231a;
+            font-family: 'Arial Black', sans-serif;
         }
         input {
             width: 100%;
