--- a/webapp/html/landing.html
+++ b/webapp/html/landing.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to State Farm</title>
+</head>
+<body>
+    <div class="container">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/State_Farm_logo.svg/512px-State_Farm_logo.svg.png" alt="State Farm Logo">
+        <div class="welcome-text" id="welcomeText">Like a Good Neighbor, State Farm is There.</div>
+    </div>
+</body>
+</html>
