--- a/webapp/html/landing.html
+++ b/webapp/html/landing.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel=stylesheet type="text/css" href="/css/landing.css">
+    <link rel=stylesheet type="text/css" href="webapp/css/landing.css">
     <title>Welcome to State Farm</title>
 </head>
 <body>
