--- a/webapp/html/landing.html
+++ b/webapp/html/landing.html
@@ -12,6 +12,6 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/State_Farm_logo.svg/512px-State_Farm_logo.svg.png" alt="State Farm Logo">
         <div class="welcome-text" id="welcomeText">Like a Good Neighbor, State Farm is There.</div>
     </div>
-    <script type="text/javascript" src="landing.js"></script>
+    <script type="text/javascript" src="webapp/js/landing.js"></script>
 </body>
 </html>
