--- a/webapp/html/login.html
+++ b/webapp/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - State Farm</title>
-    
+    <link rel=stylesheet type="text/css" href="webapp/css/login.css">
 </head>
 <body>
     <div class="container">
