--- a/webapp/html/landing.html
+++ b/webapp/html/landing.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel=stylesheet type="text/css" href="webapp/css/landing.css">
+    <link rel=stylesheet type="text/css" href="../css/landing.css">
     <title>Welcome to State Farm</title>
 </head>
 <body>
@@ -12,6 +12,6 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/State_Farm_logo.svg/512px-State_Farm_logo.svg.png" alt="State Farm Logo">
         <div class="welcome-text" id="welcomeText">Like a Good Neighbor, State Farm is There.</div>
     </div>
-    <script type="text/javascript" src="webapp/js/landing.js"></script>
+    <script type="text/javascript" src="../js/landing.js"></script>
 </body>
 </html>
