--- a/webapp/html/login.html
+++ b/webapp/html/login.html
@@ -12,9 +12,10 @@
         <div class="subtitle">ForecastTX</div>
         <h2>Login</h2>
         <form>
-            <input type="text" placeholder="Username" required>
+            <input type="text" placeholder="Email" required>
             <input type="password" placeholder="Password" required>
             <button type="submit">Login</button>
+            <button type="submit">Create account</button>
         </form>
     </div>
 </body>
