--- a/webapp/html/createAccount.html
+++ b/webapp/html/createAccount.html
@@ -1,1 +1,19 @@
-
+<!-- createAccount.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Create Account - ForecastTX</title>
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <script src="../js/auth.js" defer></script>
+</head>
+<body>
+    <div class="container">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/State_Farm_logo.svg/512px-State_Farm_logo.svg.png" alt="State Farm Logo">
+        <h2>Check Authorization</h2>
+        <input type="email" id="email" placeholder="Enter your email" required>
+        <button onclick="checkEmail()">Continue</button>
+    </div>
+</body>
+</html>
