--- a/webapp/html/createAccount.html
+++ b/webapp/html/createAccount.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Account - ForecastTX</title>
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/auth.css">
     <script src="../js/auth.js" defer></script>
 </head>
 <body>
