--- a/webapp/html/login.html
+++ b/webapp/html/login.html
@@ -15,8 +15,10 @@
             <input type="text" placeholder="Email" required>
             <input type="password" placeholder="Password" required>
             <button type="submit">Login</button>
-            <button type="submit">Create account</button>
+            <button id="createAccountBtn">Create account</button>
         </form>
     </div>
 </body>
+    <script src="../js/login.js" defer></script>
+
 </html>
