--- a/webapp/html/createAccount.html
+++ b/webapp/html/createAccount.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/State_Farm_logo.svg/512px-State_Farm_logo.svg.png" alt="State Farm Logo">
+        <div class="subtitle">ForecastTX</div>
         <h2>Check Authorization</h2>
         <input type="email" id="email" placeholder="Enter your email" required>
         <button onclick="checkEmail()">Continue</button>
